--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -2,6 +2,8 @@ name: Welcome New Contributor
 on:
   pull_request:
     types: [opened]
+permissions:
+  pull-requests: write
 jobs:
   welcome:
     runs-on: ubuntu-latest
