--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,15 +1,20 @@
 name: Welcome New Contributor
+
 on:
   pull_request:
     types: [opened]
+
 permissions:
-  pull-requests: write
+  pull-requests: write  # 👈 This line gives permission to comment on pull requests
+
 jobs:
   welcome:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+
     - name: Comment on PR
       uses: actions/github-script@v7
       with:
@@ -18,5 +23,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: `Welcome to the project, @${{ github.actor }}! Thank you for your first pull request! `
-          })
+            body: `Welcome to the project, @${{ github.actor }}! Thank you for your first pull request! 
+          })
